@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-21T08:19:13Z",
-  "count_outdated" : 266,
-  "uniques_outdated" : 144,
+  "timestamp" : "2022-05-21T16:20:14Z",
+  "count_outdated" : 275,
+  "uniques_outdated" : 150,
   "count" : 321,
   "uniques" : 180,
   "clones" : [
-    {
-      "timestamp": "2022-05-07T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 9 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ]
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 11,
