@@ -1,12 +1,7 @@
 {
-  "count": 55,
-  "uniques": 18,
+  "count": 46,
+  "uniques": 15,
   "clones": [
-    {
-      "timestamp": "2022-05-07T00:00:00Z",
-      "count": 9,
-      "uniques": 6
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 11,
