@@ -1,3 +1,10 @@
+2022-05-21T16:20:14Z:
+* notice: last 14d: unq all: 15 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 144 266 / 180 321
+* notice: next accum: outdated-unq outdated-all / unq all: 150 275 / 180 321
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-21T08:19:13Z:
 * notice: last 14d: unq all: 18 55
 * notice: prev accum: outdated-unq outdated-all / unq all: 144 266 / 178 319
